integrating slit page

--- a/resources/assets/sass/app.scss
+++ b/resources/assets/sass/app.scss
@@ -8,3 +8,8 @@
 // Bootstrap
 @import "~bootstrap-sass/assets/stylesheets/bootstrap";
 
+// Custom CSS
+@import "custom";
+
+// Media queries
+@import "media-queries";
